// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component should render - multiple schema 1`] = `
<Component
  gutter="md"
>
  <Component
    key="settings-form-0"
  >
    <Component>
      <Component>
        <FormRenderer
          FormTemplate={[Function]}
          clearOnUnmount={false}
          componentMapper={
            Object {
              "checkbox": [Function],
              "date-picker": [Function],
              "dual-list-select": Object {
                "component": [Function],
                "renderStatus": [Function],
              },
              "field-array": [Function],
              "plain-text": [Function],
              "plain-text-with-links": [Function],
              "radio": [Function],
              "select": [Function],
              "select-field": [Function],
              "slider": [Function],
              "sub-form": [Function],
              "switch": [Function],
              "switch-field": [Function],
              "tabs": [Function],
              "text-field": [Function],
              "textarea": [Function],
              "textarea-field": [Function],
              "time-picker": [Function],
              "wizard": [Function],
            }
          }
          initialValues={Object {}}
          onSubmit={[Function]}
          schema={Object {}}
          validatorMapper={
            Object {
              "exact-length-validator": [Function],
              "max-length-validator": [Function],
              "min-items-validator": [Function],
              "min-length-validator": [Function],
              "pattern-validator": [Function],
              "required-validator": [Function],
              "url-validator": [Function],
            }
          }
        />
      </Component>
    </Component>
  </Component>
  <Component
    key="settings-form-1"
  >
    <Component>
      <Component>
        <FormRenderer
          FormTemplate={[Function]}
          clearOnUnmount={false}
          componentMapper={
            Object {
              "checkbox": [Function],
              "date-picker": [Function],
              "dual-list-select": Object {
                "component": [Function],
                "renderStatus": [Function],
              },
              "field-array": [Function],
              "plain-text": [Function],
              "plain-text-with-links": [Function],
              "radio": [Function],
              "select": [Function],
              "select-field": [Function],
              "slider": [Function],
              "sub-form": [Function],
              "switch": [Function],
              "switch-field": [Function],
              "tabs": [Function],
              "text-field": [Function],
              "textarea": [Function],
              "textarea-field": [Function],
              "time-picker": [Function],
              "wizard": [Function],
            }
          }
          initialValues={Object {}}
          onSubmit={[Function]}
          schema={Object {}}
          validatorMapper={
            Object {
              "exact-length-validator": [Function],
              "max-length-validator": [Function],
              "min-items-validator": [Function],
              "min-length-validator": [Function],
              "pattern-validator": [Function],
              "required-validator": [Function],
              "url-validator": [Function],
            }
          }
        />
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`component should render - no data 1`] = `
<Component
  gutter="md"
>
  <Component>
    <Component>
      <Component>
        <Skeleton
          isDark={false}
          size="lg"
        />
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`component should render - no schema 1`] = `
<Component
  gutter="md"
/>
`;

exports[`component should render - one schema 1`] = `
<Component
  gutter="md"
>
  <Component
    key="settings-form-0"
  >
    <Component>
      <Component>
        <FormRenderer
          FormTemplate={[Function]}
          clearOnUnmount={false}
          componentMapper={
            Object {
              "checkbox": [Function],
              "date-picker": [Function],
              "dual-list-select": Object {
                "component": [Function],
                "renderStatus": [Function],
              },
              "field-array": [Function],
              "plain-text": [Function],
              "plain-text-with-links": [Function],
              "radio": [Function],
              "select": [Function],
              "select-field": [Function],
              "slider": [Function],
              "sub-form": [Function],
              "switch": [Function],
              "switch-field": [Function],
              "tabs": [Function],
              "text-field": [Function],
              "textarea": [Function],
              "textarea-field": [Function],
              "time-picker": [Function],
              "wizard": [Function],
            }
          }
          initialValues={Object {}}
          onSubmit={[Function]}
          schema={Object {}}
          validatorMapper={
            Object {
              "exact-length-validator": [Function],
              "max-length-validator": [Function],
              "min-items-validator": [Function],
              "min-length-validator": [Function],
              "pattern-validator": [Function],
              "required-validator": [Function],
              "url-validator": [Function],
            }
          }
        />
      </Component>
    </Component>
  </Component>
</Component>
`;
